--- a/query.css
+++ b/query.css
@@ -52,3 +52,38 @@
         /* width: 6rem; */
     }
 }
+
+.add-button{
+    color: white;
+    text-align: center;
+    width: 370px;
+    left: 300px;
+    border: solid #81D8DB 2px;
+
+}
+.add-button:hover{
+    background-color:#5dc0c4 !important;
+    color: white!important;
+    border: solid #5dc0c4 2px!important;
+}
+
+.lib-button{
+    color: #81D8DB;
+    text-align: center;
+    width: 370px;
+    left: 300px;
+    border: solid #81D8DB 2px;
+    margin-top: 10px;
+}
+.lib-button:hover{
+    background-color: #5dc0c4!important;
+    color: white !important;
+}
+
+.heading{
+    color:#474848;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    margin-left: 227px;
+    font-weight: bold;
+}
