--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ navbar{
     border-radius:rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 #addbook:hover{
-    background-color: #5ee2e7;
+    background-color: #2aebf2;
     border-color: #5ee2e7;
 
 }
@@ -59,8 +59,8 @@ navbar{
 
 }
 #libgo:hover{
-    background-color: #81D8DB;
-    border-color: #81D8DB;
+    background-color: #5ee2e7;
+    border-color: #5ee2e7;
     color: white;
 
 }
@@ -214,11 +214,10 @@ h6{
     border-radius: 3px;
     margin-left: 8.2rem;
     height: 3rem;
-    background-color: #81D8DB;
-    border: 2px solid #ffffff;
+    background-color: #0b8387;
     color: white;
     /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.671); */
-    border: 2px solid #81D8DB;
+    border: 2px solid #0b8387;
 }
 /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.671); */
 
