--- a/query.css
+++ b/query.css
@@ -84,6 +84,6 @@
     color:#474848;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    margin-left: 227px;
+    margin-left: 11rem;
     font-weight: bold;
 }
